generated/checkers/gen/AllGen-Misuse-da1983355ccefcfb3f8eb410fff82e250fa87e39/build_logs/syntax-repair-05/build_stderr_1.log
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp: In member function ‘const clang::FieldDecl* {anonymous}::SAGenTestChecker::getCountedByField(const clang::FieldDecl*) const’:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:119:28: error: ‘const class clang::CountedByAttr’ has no member named ‘getCountedBy’; did you mean ‘AT_CountedBy’?
  119 |   if (const Expr *E = CBA->getCountedBy()) {
      |                            ^~~~~~~~~~~~
      |                            AT_CountedBy
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp: In member function ‘const clang::ento::FieldRegion* {anonymous}::SAGenTestChecker::findArrayFieldRegionFromDest(const clang::ento::MemRegion*) const’:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:137:12: error: ‘const class clang::ento::MemRegion’ has no member named ‘getSuperRegion’; did you mean ‘getBaseRegion’?
  137 |     R = R->getSuperRegion();
      |            ^~~~~~~~~~~~~~
      |            getBaseRegion
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp: In member function ‘const clang::ento::FieldRegion* {anonymous}::SAGenTestChecker::makeFieldRegionFor(const clang::ento::MemRegion*, const clang::FieldDecl*, clang::ento::CheckerContext&) const’:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:149:3: error: ‘RegionManager’ was not declared in this scope
  149 |   RegionManager &RM = C.getSValBuilder().getRegionManager();
      |   ^~~~~~~~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:149:18: error: ‘RM’ was not declared in this scope
  149 |   RegionManager &RM = C.getSValBuilder().getRegionManager();
      |                  ^~
make[3]: *** [tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/build.make:76: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/SAGenTestChecker.cpp.o] Error 1
make[2]: *** [CMakeFiles/Makefile2:31101: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/all] Error 2
make[1]: *** [CMakeFiles/Makefile2:31108: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/rule] Error 2
make: *** [Makefile:7495: SAGenTestPlugin] Error 2
